# advent_of_code_2023

./: .gitignore  Cargo.toml  README.md  benchmarks.txt
.github/workflows/: rust.yml
framework/: Cargo.toml
framework/src/: astr.rs  cbuffer.rs  error.rs  graph.rs  grid.rs  inputs.rs  iter.rs  lib.rs  ocr.rs  offsets.rs  outputs.rs  prelude.rs  result.rs  runner.rs  util.rs  vecs.rs
framework/src/parsers/: combi.rs  common.rs  error.rs  grid.rs  mod.rs  multi.rs  numbers.rs  util.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day21_vis.html  day22.rs  day23.rs  day24.rs  day25.rs  main.rs  prelude.rs
